# splits-rs

./: .gitignore  Cargo.toml  pyproject.toml  readme.md
.github/workflows/: CI.yml
src/: lib.rs
