[package]
name = "splits-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "splits_rs"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "53.1.0", features = ["pyarrow"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
numpy = "0.22.0"
pyo3 = "0.22.0"
